--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     tools:context=".MainActivity">
-    <Button
-        android:id="@+id/btn_clike"
-        android:text="@string/clike"
-        android:layout_gravity="center"
-        android:layout_marginTop="25dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
     <SeekBar
         android:id="@+id/seekBar"
-        android:scaleY="1"
-        android:max="10"
-        android:layout_margin="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:scaleY="2"
-        android:max="10"
-        android:progress="5"
-        android:layout_margin="30dp"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:scaleY="1.3"
+        android:layout_marginEnd="20dp"
+        android:progress="2"
+        android:max="0"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="80dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
