--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,18 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     tools:context=".MainActivity">
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:scaleY="1.3"
-        android:layout_marginEnd="20dp"
-        android:progress="2"
-        android:max="0"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_click"
+        android:text="@string/click"
+        android:textSize="25sp"
+        android:layout_margin="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <RatingBar
+        android:id="@+id/rb_starts"
+        android:layout_margin="20dp"
+        android:numStars="5"
+        android:rating="0"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
