--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_margin="20dp"
         android:numStars="5"
         android:rating="0"
+        android:theme="@style/CustomRatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
