--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    tools:ignore="UsingOnClickInXml,onClick"
     tools:context=".MainActivity">
-    <!-- Extended Floating Action Button -->
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="155dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/purple_500"
-        android:gravity="center"
-        android:text="@string/list"
-        android:textColor="@color/white"
-        app:icon="@drawable/ic_list"
-        app:iconTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:rippleColor="@color/gray"
-        app:srcCompat="@drawable/ic_list" />
-    <!-- Share Floating Action Button -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/share_Button"
+    <Button
+        android:layout_marginTop="50dp"
+        android:text="@string/insert_contact"
+        android:textSize="22sp"
+        android:onClick="insertContact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/send_email"
+        android:textSize="22sp"
+        android:onClick="sendEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/search_in_web"
+        android:textSize="22sp"
+        android:onClick="searchInWeb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/open_web_page"
+        android:textSize="22sp"
+        android:onClick="openWebPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="@string/share"
-        app:layout_constraintBottom_toTopOf="@+id/add_Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_share" />
-    <!-- Add Floating Action Button -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_Button"
+        android:layout_margin="10dp"
+        android:onClick="openSetting"
+        android:text="@string/open_setting"
+        android:textSize="22sp" />
+
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/dial_phone_number"
+        android:textSize="22sp"
+        android:onClick="dialPhoneNumber"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="@string/add"
-        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_add" />
-    <!-- Delete Floating Action Button -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/delete_button"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/share_text"
+        android:textSize="22sp"
+        android:onClick="shareText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="@string/delete"
-        app:layout_constraintBottom_toTopOf="@+id/share_Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        app:srcCompat="@android:drawable/ic_delete" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
+</LinearLayout>
