--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/root"
     android:gravity="center_horizontal"
     tools:ignore="UsingOnClickInXml,onClick"
     tools:context=".MainActivity">
