Media Player part 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,49 +20,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginBottom="262dp"
+        android:backgroundTint="@color/purple_200"
         android:contentDescription="@string/play"
-        android:backgroundTint="@color/purple_200"
-        app:rippleColor="@color/gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fab_pause"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_play" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:contentDescription="@string/pause"
-        android:backgroundTint="@color/purple_200"
-        app:rippleColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fab_Stop"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fab_play"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.166"
-        app:srcCompat="@drawable/ic_pause" />
+        app:layout_constraintVertical_bias="1.0"
+        app:rippleColor="@color/gray"
+        app:srcCompat="@drawable/ic_play" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_Stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginBottom="262dp"
         android:backgroundTint="@color/purple_200"
-        app:rippleColor="@color/gray"
         android:contentDescription="@string/stop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fab_pause"
+        app:layout_constraintStart_toEndOf="@+id/fab_play"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0"
+        app:rippleColor="@color/gray"
         app:srcCompat="@drawable/ic_stop" />
 </androidx.constraintlayout.widget.ConstraintLayout>
