--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,16 @@
         android:id="@+id/fab_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginBottom="262dp"
-        android:backgroundTint="@color/purple_200"
+        android:layout_marginStart="140dp"
+        android:layout_marginBottom="176dp"
+        android:backgroundTint="@color/purple_500"
         android:contentDescription="@string/play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fab_Stop"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar"
         app:rippleColor="@color/gray"
         app:srcCompat="@drawable/ic_play" />
 
@@ -42,17 +42,31 @@
         android:id="@+id/fab_Stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="94dp"
         android:layout_marginEnd="144dp"
-        android:layout_marginBottom="262dp"
-        android:backgroundTint="@color/purple_200"
+        android:layout_marginBottom="176dp"
+        android:backgroundTint="@color/purple_500"
         android:contentDescription="@string/stop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fab_play"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar"
         app:rippleColor="@color/gray"
         app:srcCompat="@drawable/ic_stop" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:progressTint="@color/purple_700"
+        android:thumbTint="@color/purple_700"
+        android:progressBackgroundTint="@color/black"
+        android:max="100"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
